Trying to fix a bug on mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -91,7 +91,7 @@ body
   --textLink: #BF5CAA
 
 body.dark
-  -webkit-font-smoothing: antialised
+  -webkit-font-smoothing: antialiased
   --bg: #2D2D2D
   --textNormal: #EFEFEF
   --textLink: #81C0FF
